<resources>
    <string name="app_name">QuizAppTest</string>

    /*Buttons*/
    <string name="btnOption">Optionen</string>
    <string name="btnHighscore">Bestenliste</string>
    <string name="btnPlay">Spielen</string>
    <string name="btnMenu">Hauptmenü</string>
    <string name="btnAbout">Über Uns</string>
    <string name="btnQuit">Beenden</string>

    /*RadioButtons*/
    <string name="rbtnA">Operating System</string>
    <string name="rbtnB">Smart phone</string>
    <string name="rbtnC">Black OS</string>
    <string name="rbtnD">Random Access Memory</string>

    /*TextViews*/
    <string name="tvMenu">Hauptmenü</string>
    <string name="tvOption">Optionen</string>
    <string name="tvGame">Wer wird Millionär</string>
    <string name="tvVolume">Effekte</string>
    <string name="tvVolume2">Musik</string>
    <string name="tvColors">Farbschema</string>
    <string name="tvScore">Score : 1570 point</string>
    <string name="tvTotalQuestion">Erste Frage</string>
    <string name="tvTimer">30</string>
    <string name="tvQuestion">What is Android?</string>

    /*Spinner*/
    <string-array name="spColors">
        <item>lightmode</item>
        <item>darkmode</item>
        <item>alternatemode</item>
    </string-array>
</resources>