<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    android:background="@drawable/bgapp"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvtotalQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="370dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="240dp"
            android:autoSizeTextType="uniform"
            android:text="@string/tvTotalQuestion"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMenuGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0297FA"
            android:text="@string/btnMenu"
            android:textColor="#000"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/tvScore"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivModerator"
            android:layout_width="562dp"
            android:layout_height="150dp"
            android:src="@drawable/moderator2"
            android:layout_marginEnd="130dp"/>

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tvTimer"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_baseline_timer_24" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/question_container_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tvQuestion"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/rbtnA"
                    android:layout_width="460dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/button_background_color_correct"
                    android:button="@null"
                    android:freezesText="true"
                    android:padding="12sp"
                    android:text="@string/rbtnA"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/rbtnB"
                    android:layout_width="460dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/button_background_color_wrong"
                    android:button="@null"
                    android:freezesText="true"
                    android:padding="12sp"
                    android:text="@string/rbtnB"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="25sp" />


                <!--                <RadioButton-->
                <!--                     />-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/rbtnC"
                    android:layout_width="460dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/button_background_color_wrong"
                    android:button="@null"
                    android:freezesText="true"
                    android:padding="12sp"
                    android:text="@string/rbtnC"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/rbtnD"
                    android:layout_width="460dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/button_background_color_wrong"
                    android:button="@null"
                    android:freezesText="true"
                    android:padding="12sp"
                    android:text="@string/rbtnD"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="25dp" />
            </LinearLayout>

        </RadioGroup>
    </LinearLayout>

</LinearLayout>